# Breakout-Arkanoid

./: .gitignore  CMakeLists.txt  README.md  USAGE.md  setup_deps.bat  unistall_deps.bat
assets/: grid.txt  level1.txt  level2.txt  level3.txt  level4.txt  level5.txt
include/: EffectType.hpp  Entity.hpp  Entity_Ball.hpp  Entity_Brick.hpp  Entity_Paddle.hpp  Entity_PowerUp.hpp  Game.hpp  Physics.hpp  Starfield.hpp  State.hpp  StateGameOver.hpp  StatePlay.hpp  State_MainMenu.hpp  State_Pause.hpp  State_Win.hpp  Timer.hpp  TimerManager.hpp  UI.hpp
src/: EntityBrick.cpp  Entity_Ball.cpp  Entity_Paddle.cpp  Entity_PowerUp.cpp  Game.cpp  Physics.cpp  StateGameOver.cpp  StatePlay.cpp  State_GameOver.cpp  State_MainMenu.cpp  State_Pause.cpp  State_Play.cpp  State_Win.cpp  Timer.cpp  TimerManager.cpp  UI.cpp  main.cpp
